--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
-    "vue": "^3.2.31",
-    "vue-router": "^4.0.12",
+    "@tiptap/starter-kit": "^2.0.0-beta.183",
+    "@tiptap/vue-3": "^2.0.0-beta.90",
     "axios": "^0.26.0",
+    "vue": "^3.2.31",
     "vue-axios": "^3.4.1",
     "vue-content-loader": "^2.0.1",
+    "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
