--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@tiptap/starter-kit": "^2.0.0-beta.183",
     "@tiptap/vue-3": "^2.0.0-beta.90",
     "axios": "^0.26.0",
+    "json-server": "^0.17.0",
     "vue": "^3.2.31",
     "vue-axios": "^3.4.1",
     "vue-content-loader": "^2.0.1",
