--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "@tiptap/extension-link": "^2.0.0-beta.36",
+    "@tiptap/extension-mention": "^2.0.0-beta.95",
     "@tiptap/starter-kit": "^2.0.0-beta.183",
+    "@tiptap/suggestion": "^2.0.0-beta.90",
     "@tiptap/vue-3": "^2.0.0-beta.90",
     "axios": "^0.26.0",
     "json-server": "^0.17.0",
+    "tippy.js": "^6.3.7",
     "vue": "^3.2.31",
     "vue-axios": "^3.4.1",
     "vue-content-loader": "^2.0.1",
@@ -19,6 +23,12 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.2",
+    "node-sass": "^7.0.1",
+    "sass": "^1.50.0",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
+    "stylus": "^0.57.0",
+    "stylus-loader": "^6.2.0",
     "vite": "^2.8.4"
   }
 }
